# xserver-virt

./: configure.ac
hw/: Makefile.am
hw/vfb/: Makefile.am
hw/virt/: .gitignore  Makefile.am  mmapfb.c  mmapfb.h  query.c  query.h  query.mk  query.py  vfbinfo.h  view_raw.py  virtExt.h  virtExtInit.cc  xorg-version.h  xvirt.c  xvirt.h
hw/vnc/: .gitignore  Makefile.am  virtExt.h  virtExtInit.h  vncExtInit.cc  vncExtInit.h  xvirt.c  xvnc.c
hw/xfree86/: Makefile.am
hw/xnest/: Makefile.am
mi/: miinitext.c
test/: Makefile.am
test/xi2/: Makefile.am
